# SPI_Interface_arduino

./: .gitignore  README.md  upload.sh
master/: CMakeLists.txt  InterfaceSpi.cpp  InterfaceSpi.h  main.cpp  upload.sh
slave/: CMakeLists.txt  main.cpp
